syntax = "proto3";
package republique;

import "google/protobuf/timestamp.proto";
//import "google/protobuf/empty.proto";

////////////////////////////////////////////////////////////////////////////////////////////////////////////
// RPCs
service GameService {
  rpc Echo(StringMessage) returns (StringMessage) {}
  rpc Version(EmptyMessage) returns (StringMessage) {}
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Messages
message StringMessage {
  string value = 1;
}

message EmptyMessage {
  // empty
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Types

message Grid {
  int64 x = 1;
  int64 y = 2;
  bool cover = 3;
  bool woods = 4;
  bool bua = 5;
  bool fort = 6;
}

message Unit {
  string uuid = 1;
  string name = 2;
  Arm arm = 3;
  UnitType unitType = 4;
  int64 strength = 5;
  int64 hits = 6;
  UnitGrade grade = 7;
  MoraleState moraleBase = 8;
  MoraleState moraleState = 9;
  SkirmishRating skirmishRating = 10;
  int64 skirmisherMax = 11;
  int64 skirmishersDeployed = 12;
  Formation formation = 13;
  string notes = 14;
  bool bnGuns = 15;
  bool gunsDamaged = 16;
  bool gunsDeployed = 17;
  bool gunsStocked = 18;
  bool hidden = 19;
  bool hasFired = 20;
  int64 fatigue = 21;
  bool lowAmmo = 22;
  int64 cover = 23;
  string pinCode = 24;
  Grid grid = 25;
  string instructions = 26;
  bool actionRequired = 27;
  Grid objective = 28;
  Grid moveTo = 29;
  Grid gunTarget = 30;
  bool hasCharged = 31;
  string supportingUnit = 32;
  string engagedUnit = 33;
  bool canAssault = 34;
  bool hasAssaulted = 35;
  Nationality nationality = 36;
  Drill drill = 37;
  bool commandReserve = 38;
}

message Command {
  string commanderName = 1;
  string name = 2;
  string formation = 3;
  CommandRating commandRating = 5;
  int64 panicState = 6;
  bool injured = 7;
  Rank rank = 8;
  string pinCode = 9;
  string accessCode = 10;
  Grid grid = 11;
  string armyID = 12;
  string objective = 13;
  Order orders = 14;
  string attachedTo = 15;
  bool hasOrdered = 16;
  bool hasMoved = 17;
  bool hasRallied = 18;
  repeated Command subcommands = 19;
  repeated Unit units = 20;
  int64 commanderBonus = 21;
  Arm arm = 22;
  Nationality nationality = 23;
  UnitGrade grade = 24;
  Drill drill = 25;
  string notes = 26;
  bool reserve = 27;
}

message Army {
  string uuid = 1;
  string name = 2;
  string period = 3;
  CommandRating commandRating = 4;
  string commanderID = 5;
  string accessCode = 6;
  repeated Command commands = 7;
  Nationality nationality = 8;
}

message ScenarioCommand {
  string uuid = 1;
  string armyID = 2;
  string commandID = 3;
  string briefing = 4;
  Grid startLocation = 5;
  string objective = 6;
  Order orders = 7;
  string playerName = 8;
  string playerEmail = 9;
}

message Scenario {
  string uuid = 1;
  string background = 2;
  repeated ScenarioCommand playerCommands = 3;
  repeated Army armies = 4;
  repeated Command commands = 5;
  repeated Unit units = 6;
  google.protobuf.Timestamp startTime = 7;
}

message Game {
  string uuid = 1;
  string scenarioID = 2;
  repeated ScenarioCommand playerCommands = 4;
  repeated Army armies = 5;
  repeated Command commands = 6;
  repeated Unit units = 7;
  int64 turnNumber = 8;
  google.protobuf.Timestamp startTime = 9;
  google.protobuf.Timestamp gameTime = 10;
}

////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Types

enum Arm {
  SUPPORT = 0;
  INFANTRY = 1;
  CAVALRY = 2;
  ARTILLERY = 3;
  COMMAND = 4;
}

enum UnitType {
  SUPPORT_UNIT = 0;
  INFANTRY_LINE = 1;
  INFANTRY_LIGHT = 2;
  INFANTRY_GRENADIER = 3;
  INFANTRY_IRREGULAR = 4;
  INFANTRY_RIFLES = 5;
  CAVALRY_LIGHT = 6;
  CAVALRY_HUSSAR = 7;
  CAVALRY_DRAGOON = 8;
  CAVALRY_CUIRASSIER = 9;
  CAVALRY_COSSACK = 10;
  CAVALRY_HEAVY = 11;
  CAVALRY_MEDIUM = 12;
  CAVALRY_LANCER = 13;
  ARTILLERY_BN = 14;
  ARTILLERY_LIGHT = 15;
  ARTILLERY_MEDIUM = 16;
  ARTILLERY_HEAVY = 17;
  ARTILLERY_HORSE = 18;
  ARTILLERY_LIGHT_HORSE = 19;
}

enum UnitGrade {
  CIVILIAN = 0;
  MILITIA = 1;
  CONSCRIPT = 2;
  REGULAR = 3;
  VETERAN = 4;
  ELITE = 5;
  GUARD = 6;
}

enum MoraleState {
  RESTING = 0;
  GOOD = 1;
  UNFORMED = 2;
  RATTLED = 3;
  SHAKEN = 4;
  DEMORALISED = 5;
}

enum Formation {
  RESERVE = 0;
  MARCH_COLUMN = 1;
  ATTACK_COLUMN = 2;
  LINE = 3;
  ECHELON = 4;
  SUPPORTING_LINES = 5;
  DEBANDE = 6;
  FORTIFIED = 7;
}

enum Rank {
  BATTALION = 0;
  BRIGADE = 1;
  DIVISION = 2;
  CORPS = 3;
  WING = 4;
  ARMY = 5;
  NATIONAL_LEADER = 6;
  ARTILLERY_DIV = 7;
  CAVALRY_BDE = 8;
  CAVALRY_DIV = 9;
  BATTERY = 10;
  GUN_PARK = 11;
}

enum SkirmishRating {
  POOR = 0;
  ADEQUATE = 1;
  CRACK_SHOT = 2;
  EXCELLENT = 3;
}

enum CommandRating {
  USELESS = 0;
  CUMBERSOME = 1;
  FUNCTIONAL = 2;
  EFFICIENT = 3;
}

enum Order {
  RESTAGE = 0;
  MARCH = 1;
  MOVE = 2;
  DEFEND = 3;
  WITHDRAW = 4;
  ATTACK = 5;
  RALLY = 6;
}

enum Nationality {
  ANY_NATION = 0;
  FRENCH = 1;
  BRITISH = 2;
  RUSSIAN = 3;
  PRUSSIAN = 4;
  SPANISH = 6;
  OTTOMAN = 7;
  PERSIAN = 8;
  AUSTRIAN = 9;
  AMERICAN = 10;
  INDIAN = 11;
  ITALIAN = 12;
  BAVARIAN = 13;
  DUTCH = 14;
  BELGIAN = 15;
  NASSAU = 16;
  SWISS = 17;
  PAPAL_STATES = 18;
  AFRICAN = 19;
  NATIVE = 20;
  COLONIAL = 21;
  SWEDEN = 22;
}

enum Drill {
  LINEAR = 0;
  MASSED = 1;
  RAPID = 2;
}
